--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -28,18 +28,18 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
+                <th>№ Заказа</th>
                 <th>Продажа</th>
                 <th>Себестоимость</th>
-                <th>organisation_payer</th>
                 <th>created</th>
                 <th>Contractor</th>
             </thead>
             <tbody>
             {% for item in order %}
             <tr>
+                <td>{{ item.id }}</td>
                 <td>{{ item.total_price }}</td>
                 <td>{{ item.cost_total_price }}</td>
-                <td>{{ item.organisation_payer }}</td>
                 <td>{{ item.created }}</td>
                 <td>{{ item.Contractor }}</td>
 
