--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -2,14 +2,17 @@
     <title>{% block title %} Главная страница {% endblock %}</title>
 {% block body %}
 {% if object_list.count > 0 %}
+
+
+
 <h2>Список файлов: </h2>
-<hr>
+<!--<hr>-->
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>Id</th>
+                <th>№</th>
                 <th>Картинка</th>
                 <th>Материал</th>
                 <th>Кол-во</th>
@@ -17,10 +20,11 @@
                 <th>Финишка</th>
                 <th>Стоимость</th>
                 <th>Статус</th>
-                <th>Дата</th>
+                <th>Дата загрузки</th>
        </thead>
             <tbody>
-                {% for product in object_list %}
+
+            {% for product in page_obj %}
                 <tr>
                     <td>{{ product.id }}</td>
                     <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
@@ -51,6 +55,30 @@
     </div>
 </div>
 
+    {% if page_obj.has_other_pages %}
+    <nav aria-label="...">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{page_obj.previous_page_number}}">Предыдущая</a>
+            </li>
+            {% endif %}
+            {% for p in page_obj.paginator.page_range %}
+            {% if page_obj.number == p %}
+            <li class="page-item active" aria-current="page"><a class="page-link" href="{{ p }}">{{ p }}</a></li>
+            {% elif p >= page_obj.number|add:-2 and p <= page_obj.number|add:2 %}
+            <li class="page-item"><a class="page-link" href="?page={{ p }}"> {{ p }}</a></li>
+            {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{page_obj.next_page_number}}">Следующая</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </nav>
+    {% endif %}
 
     {% endif %}
     {% endblock %}
