--- a/files/templates/files/calculator_large.html
+++ b/files/templates/files/calculator_large.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 {% load crispy_forms_tags %}
 
-<title>{% block title %} Калькулятор {% endblock %}</title>
+
+{% block title %}{{ title }}{% endblock %}
 {% block body %}
 <div class="container-fluid">
 
