--- a/files/templates/files/calculator_large.html
+++ b/files/templates/files/calculator_large.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Калькулятор печати</h1>
+    <h1 class="h3 mb-2 text-gray-800">Калькулятор Широкоформатной печати</h1>
     <p class="mb-4">Выберите материал, укажите обработку если есть введите размер и нажмите кнопку "Посчитать"</p>
 
 <div class="card shadow mb-4">
