--- a/files/templates/files/inter_print.html
+++ b/files/templates/files/inter_print.html
@@ -7,9 +7,7 @@
 
 <h3>Загрузите макет для Интерьерной печати</h3>
 <h4>Убедитесь что файл соответствует требованиям:</h4>
-<p>Расширение файла - TIFF</p>
-<p> Цветовая Модель - CMYK</p>
-<p> Разрешение - 150 dpi</p>
+<p>Расширение файла - TIFF Цветовая Модель - CMYK Разрешение - 150 dpi</p>
 
 
 <p>Рекомендуем использовать LWZ компрессию, ваш файл станет гораздо меньше.
