--- a/files/templates/files/base_site.html
+++ b/files/templates/files/base_site.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet" type="text/css">
+    <link href="{% static 'css/main.css' %} " rel="stylesheet" type="text/css">
 
 
 </head>
@@ -29,5 +30,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+<script src="{% static 'js/main.js' %}"</script>
+
 </body>
 </html>
