--- a/files/templates/files/base_site.html
+++ b/files/templates/files/base_site.html
@@ -31,7 +31,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
-<script src="{% static 'js/main.js' %}"</script>
+<script src="{% static 'js/main.js' %}"></script>
 
 </body>
 </html>
