--- a/files/templates/price.html
+++ b/files/templates/price.html
@@ -15,14 +15,13 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Широкоформатая печать:</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Широкоформатная печать:</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                     <th>Материал</th>
-                    <th>Тип печати</th>
                     <th>Цена</th>
                     </thead>
                     <tbody>
@@ -30,7 +29,6 @@
                     {% if field.is_active == True %}
                     <tr>
                         <td>{{ field.name }}</td>
-                        <td>{{ field.type_print }}</td>
                         {% if user.role == 'CUSTOMER_RETAIL' %}
                         <td>{{ field.price_customer_retail }} руб.</td>
                         {% elif user.role == 'CUSTOMER_AGENCY' %}
