--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -28,10 +28,10 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
-                <th>total_price</th>
-                <th>cost_total_price</th>
-                <th>organisation_payer</th>
-                <th>created</th>
+                <th>Сумма заказа</th>
+                <th>Затраты по заказу</th>
+                <th>Организация</th>
+                <th>Дата формирования заказа</th>
                 <th>Contractor</th>
             </thead>
             <tbody>
