--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 <title>{% block title %} Отчет по выполненым ордерам {% endblock %}</title>
 {% block body %}
-<h3>Отчет по выполненым ордерам</h3>
+<h3>Отчет по выполненым ордерам </h3>
 
 <form action="{%  url 'orders:report_complite_orders' %}" method="post", enctype="multipart/form-data">
 
@@ -22,6 +22,7 @@
 </form>
 <hr>
 {% if order.count > 0 %}
+<h4>За период с {{date_start}} по {{date_finish}}</h4>
 
 <div class="row">
     <div class="col-md-12">
@@ -47,6 +48,8 @@
             </tr>
                 {% endfor%}
         </table>
+        <p>Затраты за период: {{all_cost_total_price}} </p>
+        <p>Выручка за период: {{all_total_price}} </p>
         </tbody>
 
     </div>
