--- a/orders/templates/report_complite_orders.html
+++ b/orders/templates/report_complite_orders.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
-<title>{% block title %} Отчет по выполненым ордерам {% endblock %}</title>
+<title>{% block title %} Отчет по выполненым заказам {% endblock %}</title>
 {% block body %}
-<h3>Отчет по выполненым ордерам </h3>
+<h3>Отчет по выполненым заказам</h3>
 
 <form action="{%  url 'orders:report_complite_orders' %}" method="post", enctype="multipart/form-data">
 
@@ -48,8 +48,8 @@
             </tr>
                 {% endfor%}
         </table>
-        <p>Затраты за период: {{all_cost_total_price}} </p>
-        <p>Выручка за период: {{all_total_price}} </p>
+        <p>Затраты за период: {{all_cost_total_price}} руб.</p>
+        <p>Выручка за период: {{all_total_price}} руб. </p>
 
 
         </tbody>
