--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -27,6 +27,15 @@
             <tr>
                 <td>{{ order.id }}</td>
                 <td>{{ order.total_price }} руб. </td>
+                    <td>{% if order.paid == False %}
+                    <div class="mb-2">
+                        <code>Не оплачено!</code>
+
+                    </div>
+                    {% else%}
+                    <div class="text-success mb-2">Оплачено
+                    </div>
+                    {% endif %}
 <!--                <td>{{ order.organisation_payer }}</td>-->
                 <td>{{ order.paid }}</td>
 <!--                <td>{{ order.comments }}</td>-->
