--- a/files/templates/files/contractor_form.html
+++ b/files/templates/files/contractor_form.html
@@ -15,7 +15,7 @@
                     {% csrf_token %}
 
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary">Загрузить</button>
+                    <button type="submit" class="btn btn-primary">Отправить</button>
 
                 </form>
 
