--- a/files/templates/files/contractor_form.html
+++ b/files/templates/files/contractor_form.html
@@ -1,16 +1,16 @@
 {% extends 'base.html'%}
 {% load crispy_forms_tags %}
 
-{% block title %}Загрузка макета для Роллапа{% endblock %}
+{% block title %}!!! Contractor Form{% endblock %}
 
 {% block body %}
 
+
 <div class="col-xl-8 col-lg-7">
 
-        <!-- Area Chart -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <form action="{% url 'files:contractor_view' %}" method="post" , enctype="multipart/form-data">
+                <form action="{% url 'files:contractor_create' %}" method="post" , enctype="multipart/form-data">
 
                     {% csrf_token %}
 
