--- a/files/templates/files/view_contractor.html
+++ b/files/templates/files/view_contractor.html
@@ -27,6 +27,9 @@
         <td> {{ item.phone_contractor_2 }} </td>
         <td> {{ item.address }}</td>
         <td> {{ item.contact_contractor }}</td>
+        <td><a href="{% url 'files:contractor_update' item.id %} ">Изменить</a></td>
+        <td><a href="{% url 'files:contractor_update' item.id %} ">Изменить</a></td>
+
     </tr>
 
     {% endfor %}
