add template delete contractor

--- a/files/templates/files/contractor_update_form.html
+++ b/files/templates/files/contractor_update_form.html
@@ -1,4 +1,7 @@
-{% block content %}
+{% extends 'base.html'%}
+<title>{% block title %} Обновление {% endblock %}</title>
+{% block body %}
+
 {% load crispy_forms_tags %}
 
 <form method="post" , enctype="multipart/form-data">
