оплата orderpay.html

--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -14,7 +14,7 @@
             <thead>
             <tr>
                 <th>Заказ №</th>
-                <th>Total</th>
+                <th>Сумма заказа</th>
 <!--                <th>Платильщик</th>-->
                 <th>Оплачено</th>
 <!--                <th>Каменты</th>-->
