--- a/orders/templates/orderpay.html
+++ b/orders/templates/orderpay.html
@@ -11,13 +11,24 @@
                 <th>Платильщик</th>
                 <th>Оплата</th>
                 <th>Сумма</th>
-                <th>Статус</th>
+                <th>Статус заказа</th>
             </thead>
             <tbody>
             <tr>
                 <td>{{ Orders.created }}</td>
                 <td>{{ Orders.organisation_payer }}</td>
-                <td>{{ Orders.paid }}</td>
+
+
+                    <td>{% if Orders.paid == False %}
+                    <div class="mb-2">
+                        <code>Не оплачено!</code>
+
+                    </div>
+                    {% else%}
+                    <div class="text-success mb-2">Оплачено
+                    </div>
+                    {% endif %}
+
                 <td>{{ Orders.total_price }} руб.</td>
                 <td>{{ Orders.status }}</td>
 <!--                <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
