add edit template add_files_in_order.html

--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -9,7 +9,6 @@
             <thead>
             <tr>
                 <th>Дата</th>
-<!--                <th>Плательщик</th>-->
                 <th>Оплата</th>
                 <th>Сумма</th>
                 <th>Статус</th>
@@ -30,9 +29,23 @@
                     {% endif %}
                 </td>
                 <td>{{ Orders.total_price }}</td>
-                <td>{{ Orders.status }}</td>
+                <td>{% if Orders.status.id == 3 %}
+                    <div class="mb-2">
+                        <code>В работе</code>
+                    </div>
+                    {% elif Orders.status.id == 5 %}
+                    <div class="text-success mb-2">Готов
+                    </div>
+                    {% elif Orders.status.id == 1 %}
+                    <div class="text-warning mb-2">Готовится
+                    </div>
+                   {% elif Orders.status.id == 2 %}
+                    <div class="text-primary mb-2">Оформлен
+                    </div>
+
+                    {% endif %}
+                        </td>
                 <td>{{ Orders.delivery }}</td>
-                <!--                <td><a href="{% url 'orders:order_pay' Orders.id %}">Оплатить</a>-->
                 <td>
 <!--                    <button type="submit" class="btn btn-primary"-->
 <!--                            onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оплатить-->
