add logo + edit price.xlsx

--- a/orders/templates/mail/mail_order_for_typografyl.html
+++ b/orders/templates/mail/mail_order_for_typografyl.html
@@ -459,7 +459,7 @@ display: inline !important;
                       <tr>
                           <td style="padding: 19px 0 19px 0; text-align: center;">
                               <a href="https://san-cd.ru" target="_blank">
-                                  <img src="logo-reds.png" alt="logo-reds" border="0" width="130">
+                                  <img src="https://www.san-cd.ru/wp-content/themes/sancd/images/logo-trans.png" alt="logo-reds" border="0" width="130">
                               </a>
                           </td>
                       </tr>
