--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -1,13 +1,14 @@
 {% extends 'base.html'%}
-    <title>{% block title %} Список Заказов: {% endblock %}</title>
+<title>{% block title %} Список Заказов: {% endblock %}</title>
 {% block body %}
 
 
 {% if Orders.count > 0 %}
-    <h2>Список Заказов: </h2>
+<h2>Список Заказов: </h2>
 <hr>
 <button type="submit" class="btn btn-primary"
-                    onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ</button>
+        onClick="location.href='{% url 'orders:new_order' %}'">Создать заказ
+</button>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -15,19 +16,20 @@
             <tr>
                 <th>Заказ №</th>
                 <th>Сумма заказа</th>
-<!--                <th>Платильщик</th>-->
+                <!--                <th>Платильщик</th>-->
                 <th>Оплачено</th>
-<!--                <th>Каменты</th>-->
+                <!--                <th>Каменты</th>-->
                 <th>Статус</th>
                 <th>Дата заказа</th>
                 <th>Дата готовности</th>
-           </thead>
+            </thead>
             <tbody>
             {% for order in Orders %}
             <tr>
                 <td>{{ order.id }}</td>
-                <td>{{ order.total_price }} руб. </td>
-                    <td>{% if order.paid == False %}
+
+                <td>{{ order.total_price }} руб.</td>
+                <td>{% if order.paid == False %}
                     <div class="mb-2">
                         <code>Не оплачено!</code>
                     </div>
@@ -35,9 +37,9 @@
                     <div class="text-success mb-2">Оплачено
                     </div>
                     {% endif %}
-<!--                <td>{{ order.organisation_payer }}</td>-->
-<!--                <td>{{ order.comments }}</td>-->
-                   <td>{% if order.status.id == 3 %}
+                    <!--                <td>{{ order.organisation_payer }}</td>-->
+                    <!--                <td>{{ order.comments }}</td>-->
+                <td>{% if order.status.id == 3 %}
                     <div class="mb-2">
                         <code>В работе</code>
                     </div>
@@ -47,42 +49,42 @@
                     {% elif order.status.id == 1 %}
                     <div class="text-warning mb-2">Готовится
                     </div>
-                   {% elif order.status.id == 2 %}
+                    {% elif order.status.id == 2 %}
                     <div class="text-primary mb-2">Оформлен
                     </div>
 
                     {% endif %}
-                        </td>
+                </td>
                 <td>{{ order.created }}</td>
                 <td>{{ order.date_complete }}</td>
 
                 {% if order.status.id >= 2 %}
 
-                    <td><a href="{% url 'orders:add_file_in_order' order.id %}">Детализация</a></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                <td><button type="submit" class="btn btn-primary"
+                            onClick="location.href='{% url 'orders:new_order' %}'">Заказ № {{ order.id }}</button></td>
+
                 {% else %}
                 <td>
-                                    <nav class="navbar navbar-expand navbar-light bg-light mb-4">
-                                        <ul class="navbar-nav ml-auto">
-                                            <li class="nav-item dropdown">
-                                                <a class="nav-link dropdown-toggle" href="{% url 'orders:add_file_in_order' order.id %}" id="navbarDropdown"
-                                                    role="button" data-toggle="dropdown" aria-haspopup="true"
-                                                    aria-expanded="false">
-                                                    Детализ
-                                                </a>
-                                                <div class="dropdown-menu dropdown-menu-right animated--grow-in"
-                                                    aria-labelledby="navbarDropdown">
-                                                    <a class="dropdown-item" href="{% url 'orders:order_pay' order.id %}">Оплатить</a>
-                                                    <a class="dropdown-item" href="{% url 'orders:update_order' order.id %}">Редактировать</a>
-                                                    <div class="dropdown-divider"></div>
-                                                    <a class="dropdown-item" href="{% url 'orders:Delete_order' order.id %}">Удалить</a>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </nav>
-</td>
+                    <!--                                    <nav class="navbar navbar-expand navbar-light bg-light mb-4">-->
+                    <!--                    <ul class="navbar-nav ml-auto">-->
+                    <!--                                            <li class="nav-item dropdown">-->
+                    <a class="btn btn-primary nav-link dropdown-toggle"
+                       href="{% url 'orders:add_file_in_order' order.id %}" id="navbarDropdown"
+                       role="button" data-toggle="dropdown" aria-haspopup="true"
+                       aria-expanded="false">
+                        Заказ № {{ order.id }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right animated--grow-in"
+                         aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'orders:order_pay' order.id %}">Оплатить</a>
+                        <a class="dropdown-item" href="{% url 'orders:update_order' order.id %}">Редактировать</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'orders:Delete_order' order.id %}">Удалить</a>
+                    </div>
+                    <!--                                            </li>-->
+                    <!--                    </ul>-->
+                    <!--                                    </nav>-->
+                </td>
                 {% endif %}
 
             </tr>
@@ -90,8 +92,8 @@
 
 
             </tbody>
-    </table>
+        </table>
     </div>
 </div>
-    {% endif %}
-    {% endblock %}
+{% endif %}
+{% endblock %}
