--- a/orders/templates/view_orders.html
+++ b/orders/templates/view_orders.html
@@ -61,7 +61,7 @@
                 {% if order.status.id >= 2 %}
 
                 <td><button type="submit" class="btn btn-primary"
-                            onClick="location.href='{% url 'orders:new_order' %}'">Заказ № {{ order.id }}</button></td>
+                            onClick="location.href='{% url 'orders:add_file_in_order' order.id %}'">Заказ № {{ order.id }}</button></td>
 
                 {% else %}
                 <td>
