--- a/files/templates/files/confirm_order_to_complieted.html
+++ b/files/templates/files/confirm_order_to_complieted.html
@@ -4,16 +4,12 @@
 {% block title %} {{title}} {% endblock %}
 {% block content %}
 
-<h1>{{title}}</h1>
-
- <div class="row">
-    <div class="col-6">
+<title>Заказ изменил статус</title>
 
 
-<h5>Заказ изменил статус на Готов</h5>
-    <h6 class="text-center>Эту страниуц можно закрыть</h6>
-    </div>
-  </div>
+
+<h5 style="text-align: center; ">Заказ изменил статус на "Готов"</h5>
+
 
 
 {% endblock %}
