--- a/files/templates/files/confirm_order_to_work.html
+++ b/files/templates/files/confirm_order_to_work.html
@@ -5,16 +5,11 @@
 {% block content %}
 
 
-<h1>{{title}}</h1>
+<title>Заказ изменил статус</title>
 
 
- <div class="row">
-    <div class="col-6">
 
-
-<h5>Заказ изменил статус на В работе</h5>
-    </div>
-  </div>
+<h5 style="text-align: center; ">Заказ изменил статус на "В работе"</h5>
 
 
 {% endblock %}
