--- a/users/templates/registration/register_users.html
+++ b/users/templates/registration/register_users.html
@@ -29,15 +29,15 @@
 
 <div class="container">
 
-    <div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card o-hidden border-0 shadow-lg ">
         <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class=" d-none "></div>
                 <div class="col-lg-7">
                     <div class="p-5">
                         <div class="text-center">
-                            <h1 class="h4 text-gray-900 mb-4">Создать акаунт!</h1>
+                            <h1 class="h4 text-gray-900 mb-4">Создать акаунт!!</h1>
                         </div>
                         <form class="user" action="{% url 'users:register' %}" method="post">
 
