--- a/files/templates/files/calculator_large.html
+++ b/files/templates/files/calculator_large.html
@@ -42,6 +42,7 @@
 
     <tbody>
     <tr>
+        <td>{{ string.material }}</td>
         <td>{{ string.quantity }} шт.</td>
         <td> {{ string.width }} м</td>
         <td> {{ string.length }} м</td>
@@ -52,5 +53,6 @@
     </tr>
 
     {% endfor %}
+
 
 {% endblock %}
