--- a/files/templates/files/base_site.html
+++ b/files/templates/files/base_site.html
@@ -23,11 +23,11 @@
                      class="img-fluid mt-lg-4 mt-3 mb-3"></a>
         </div>
 
-
+<div class="container">
         {% block content %}
 
         {% endblock %}
-
+</div>
 
     </div>
 </header>
