--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,16 +1,64 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-<title>{% block title %}Сброс забытого пароля{% endblock %}</title>
-{% block body %}
-<h1>Забыли свой пароль?</h1>
-<p>Введите свой адрес электронной почты, чтобы получить новый пароль. Ссылка для смены пароля придет на вашу почту. </p>
-<p>Необходимо ввести тот почтовый адрес с которым вы зарегистрированны в системе.</p>
-<form method="post">
-    <!-- {{ form.as_p }}-->
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Сбросить</button>
+<head>
 
-    {% csrf_token %}
-</form>
-{% endblock %}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Сервис онлайн печати баннеров</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %} " rel="stylesheet" type="text/css">
+    <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+
+
+    {% load crispy_forms_tags %}
+
+    <title>{% block title %}Сброс забытого пароля{% endblock %}</title>
+    {% block body %}
+
+<body class="bg-gradient-primary">
+
+<div class="container">
+    <div class="col-xl-12 col-lg-1 col-md-1">
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <!--            <div class="card-body p-0">-->
+            <div class="row">
+                <!--                    <div class="col-lg-6">-->
+                <div class="p-5">
+                    <div class="text-center">
+
+
+                        <h1>Забыли свой пароль?</h1>
+                        <p>Введите свой адрес электронной почты, чтобы получить новый пароль. Ссылка для смены
+                            пароля придет
+                            на
+                            вашу
+                            почту. </p>
+                        <p>Необходимо ввести тот почтовый адрес с которым вы зарегистрированны в системе.</p>
+                        <form method="post">
+                            <!-- {{ form.as_p }}-->
+                            {{ form|crispy }}
+                            <button type="submit" class="btn btn-primary">Сбросить</button>
+
+                            {% csrf_token %}
+                        </form>
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
